--- a/PruebasCOMS/platformio.ini
+++ b/PruebasCOMS/platformio.ini
@@ -16,12 +16,7 @@ platform_packages = tool-esptoolpy @ ~1.40501.0
 monitor_speed = 115200
 monitor_filters = direct
 board_build.flash_mode = dio
-
-; change microcontroller
 board_build.mcu = esp32s3
-
-; change MCU frequency
-board_build.f_cpu =     240000000L
-
-;Personalizada
+board_build.f_cpu = 240000000L
 build_flags = -DARDUINO_USB_MODE=0
+lib_deps = sgoudsme/tinycbor@^0.6.2
